[TASK] add new CE SimpleSiteHeader

--- a/Resources/Private/Partials/ContentElements/Link/Render/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/Render/ButtonLink.html
@@ -24,7 +24,7 @@
 </f:if>
 
 <f:if condition="{button_full_width}">
-  <f:variable name="btn_class">{btn_class} w-100</f:variable>
+  <f:variable name="btn_class">{btn_class} btn-block</f:variable>
 </f:if>
 
 <f:if condition="{link_position}">
