--- a/theme/src/scss/bootstrap/_index.scss
+++ b/theme/src/scss/bootstrap/_index.scss
@@ -45,5 +45,5 @@
 // @import "../../../../node_modules/bootstrap/scss/spinners";
 // @import "../../../../node_modules/bootstrap/scss/toasts";
 // @import "../../../../node_modules/bootstrap/scss/tooltip";
-// @import "../../../../node_modules/bootstrap/scss/transitions";
+@import "../../../../node_modules/bootstrap/scss/transitions";
 
