--- a/Resources/Private/Partials/PageLayout/Record/imageTextLink/Preview.html
+++ b/Resources/Private/Partials/PageLayout/Record/imageTextLink/Preview.html
@@ -1,3 +1,3 @@
 {item.preview -> f:format.raw()}
 <p class="t3kit-ce-subheader">{item.record.subheader}</p>
-{item.record.bodytext -> f:format.raw()}
+<f:format.nl2br>{item.record.bodytext}</f:format.nl2br>
