--- a/theme/src/scss/root/t3kit-root.scss
+++ b/theme/src/scss/root/t3kit-root.scss
@@ -4,3 +4,7 @@
   --t3-ff--sans-serif: 'Montserrat', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --t3-headings-text-transform: uppercase;
 }
+
+.btn {
+  --t3-btn-text-transform: uppercase;
+}
