--- a/theme/src/scss/main/content-elements/simple-site-header.scss
+++ b/theme/src/scss/main/content-elements/simple-site-header.scss
@@ -260,14 +260,22 @@
   display: block;
 }
 
+// --------------------------------------------------------
+// X-Small devices (portrait phones, less than 576px) xs
+// @media (max-width: 575.98px) { ... }
 // Small devices (landscape phones, 576px and up) sm
 // @media (min-width: 576px) { ... }
 
+// --------------------------------------------------------
+// Small devices (landscape phones, less than 768px) sm
+// @media (max-width: 767.98px) { ... }
 // Medium devices (tablets, 768px and up) md
 // @media (min-width: 768px) { ... }
 
+// --------------------------------------------------------
+// Medium devices (tablets, less than 992px) md
+// @media (max-width: 991.98px) { ... }
 // Large devices (desktops, 992px and up) lg
-// @media (min-width: 992px) { ... }
 @media (min-width: 992px) {
   .main-navigation-expand-lg.main-navigation {
     flex-wrap: nowrap;
@@ -300,6 +308,9 @@
   }
 }
 
+// --------------------------------------------------------
+// Large devices (desktops, less than 1200px) lg
+// @media (max-width: 1199.98px) { ... }
 // X-Large devices (large desktops, 1200px and up) xl
 @media (min-width: 1200px) {
   .main-navigation-expand-xl.main-navigation {
@@ -333,6 +344,9 @@
   }
 }
 
+// --------------------------------------------------------
+// X-Large devices (large desktops, less than 1400px) xl
+// @media (max-width: 1399.98px) { ... }
 // XX-Large devices (larger desktops, 1400px and up) xxl
 @media (min-width: 1400px) {
   .main-navigation-expand-xxl.main-navigation {
