[TASK] update table CE

--- a/theme/src/scss/main/content-elements/table.scss
+++ b/theme/src/scss/main/content-elements/table.scss
@@ -2,6 +2,7 @@
 // No media query for `xs` since this is the default in Bootstrap
 
 .table {
+  // Table
   --t3-table-color: var(--t3-body-color);
   --t3-table-border-color: var(--t3-border-color);
   --t3-table-bg: transparent;
