--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -25,6 +25,7 @@
 @use 'main/content-elements/textmedia';
 @use 'main/content-elements/textpic';
 @use 'main/content-elements/simple-site-header';
+@use 'main/content-elements/site-footer';
 @use 'main/content-elements/hero-image';
 // @use 'content-elements/footer';
 // @use 'content-elements/big-icon-text-button';
