--- a/theme/src/scss/root/t3kit-root.scss
+++ b/theme/src/scss/root/t3kit-root.scss
@@ -1,10 +1,20 @@
 // ==============================
 // t3kit variables
 :root {
-  --t3-ff--sans-serif: 'Montserrat', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --t3-font-sans-serif: 'Montserrat', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --t3-headings-text-transform: uppercase;
 }
 
 .btn {
   --t3-btn-text-transform: uppercase;
+}
+
+.ce-simple-site-header {
+  --t3-ce-header-nav-link-text-transform: uppercase;
+}
+
+.ce-site-footer {
+  --t3-ce-footer-links-text-transform: uppercase;
+  --t3-ce-footer-title-text-transform: uppercase;
+
 }
